package structural.decorator.bai_tap_b2;

import java.util.List;

public interface ITokenize {
    List<String> tokenize();
}
